--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,14 +1,11 @@
-<div class="parent-container">
+<div class="homepage-content">
     <div class="left-container">
         <h1 class="title">{{title}}</h1>
-        <p class="slogan">Making people's lives betta</p>
+        <p class="slogan">Making people's lives Betta</p>
     </div>
     <div class="right-container">
-        <a href="/sessions/new" class="global-button">Sign In</a>
-
+        <a href="/sessions/new">Login</a>
         <hr>
-
-        <a href="/users/new" class="global-button">Sign Up</a>
-        
+        <a href="/users/new">Sign Up</a>
     </div>
 </div>
