--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -8,7 +8,7 @@
   </div>
   <div class="bottombar">
     <a class="global-button new-post-link" href="/posts/new">Create Post</a>
-    <a class="go-top">Back to top</a>
+    <a href="/posts" class="go-top">Back to top</a>
   </div>
 </div>   
 
@@ -16,13 +16,13 @@
   {{#each posts}}
   <div class="posts">
     <div class="post-sec">
-      <div class="initials">{{this.author}}</div>
+      <div class="author">{{this.author}}</div> 
       <div class="post-details">
         <p class="message">{{this.message}}</p>
         <div class="likes">
           <form action="/posts/{{this._id}}/likes" method="POST" id="like-post">
-            <p class="likes-count">{{this.likes}}</p>
             <input type="submit" value="Like" class="global-button like-button">
+            <p class="likes-count">{{this.likes}}</p>
           </form>
         </div>
       </div>
@@ -30,14 +30,14 @@
     <div class="comments-sec">
       {{#each this.comments}}
         <div class="comment">
-          <div class="commenter-initials">{{this.author}}</div>
+          <div class="commentor-name"><strong>{{this.author}}:</strong></div>
           <p class="comment-content">{{this.content}}</p>
         </div>
       {{/each}}
     </div>
     <div class="post-comment-sec">
       <form action="/posts/{{this._id}}/comments" method="POST" id="new-comment-form">
-        <input id="comment" type="text" name="comment" value="" placeholder="Say something...">
+        <input id="comment" type="text" name="comment" value="" placeholder="Say something..." class="comment-box input-box">
         <input type="submit" value="Submit" class="global-button">
       </form>
     </div>
