ajax working for comments

--- a/views/partials/posts/post.hbs
+++ b/views/partials/posts/post.hbs
@@ -10,9 +10,11 @@
       </form>
     {{/unless}}
 
-    {{#each post.comments}}
-      {{> posts/comment this}}
-    {{/each}}
+    <ul id="comments-{{post.id}}">
+      {{#each post.comments}}
+        {{> posts/comment this}}
+      {{/each}}
+    </ul>
 
     {{> posts/new_comment post}}
     {{> posts/likes post}}
