--- a/views/partials/posts/comment.hbs
+++ b/views/partials/posts/comment.hbs
@@ -1,3 +1,5 @@
-<p><i>{{this.content}}</i><br />
-  <span class="comment-author">Posted by {{this.user}}</span>
-</p>
+<li class="comment-item">
+  <p><i>{{comment.content}}</i><br />
+    <span class="comment-author">Posted by {{comment.user}}</span>
+  </p>
+</li>
