completed logout and signup func

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     {{#if isAuthenticated}}
         <li><a href="/posts">Posts</a></li>
         <li><a href='/users/{{user.username}}'>Profile</a></li> 
-        <li><a href="/sessions/login">Logout</a></li> 
+        <li><a href="/sessions/logout" >Logout</a></li> 
     {{else}}
         <li><a href="/sessions/login">Login</a></li>
         <li><a href="/users/signup">Sign-up</a></li>
