--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -15,7 +15,8 @@
     <input id="email" type="email" name="email" placeholder="email" required class="input-box">
     <ul class="password-requirement">
       Passwords must contain:
-      <li>At least 8 characters (A-Z)</li>
+      <li>At least 8 characters</li>
+      <li>At least one letter (A-Z)</li>
       <li>At least one number</li> 
       <li>At least one special characters</li> 
     </ul>
