--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -32,7 +32,15 @@
     title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
     required/>
 
-    <input id="submit" type="submit" value="Submit" />
+    <input id="submit-signup-button" type="submit" value="Submit" />
   </form>
+
+  <form id="cancel-signup-button" action="/">
+    <input id="cancel" type="submit" value="Cancel" />
+  </form>
+
+  <div class="made-user">
+    <a href="/sessions/login">Already have an account? Log in here</a>
+  </div>
 </section>
 
