--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -10,9 +10,11 @@
 {{#if this.image.contentType}}
   <a href="/posts/{{this._id}}">
     <img src="/posts/{{this._id}}/image">
+   
   </a>
 
     {{/if}}
+     <p>{{this.content}}</p>
     <button class="likeButtonTimeline" data-postid="{{this._id}}">Like</button>
     <span id="likesCount-{{this._id}}">{{this.likes.length}}</span> likes
   </li>
@@ -67,3 +69,4 @@
 
 
 <a class="new-post-link" href="/posts/new">New post</a>
+
