ajax of likes works on existing posts

--- a/views/partials/posts/likes.hbs
+++ b/views/partials/posts/likes.hbs
@@ -1,4 +1,4 @@
-<form action="/likes" method="post">
+<form action="/likes" method="post" id="like-form">
   <input type="hidden" name="postId" value={{this._id}} />
   <button type="submit" class="like-button">❤️</button>
 </form>
