--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,13 +42,14 @@ ul li a.active {
 #new-user-form{
   padding-top: 5rem;
   color: red;
+  text-align: center;
 }
 
 
 /* Login page */
 #new-session-form{
   padding-top: 5rem;
-  
+  text-align: center;
 }
 /* 
 .error {
