--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -20,7 +20,7 @@
       </div>
     {{/if}}
     <form id="new-post-form" action="/posts" method="post">
-      <textarea id="message" class="input-area" type="text" name="message" value="" rows="6" placeholder="Say something..." maxlength="500" required></textarea>
+      <textarea id="message" class="input-area" type="text" name="message" value="" rows="6" placeholder="Say something...." maxlength="500" required></textarea>
       <input type="submit" value="Submit" class="global-button">
     </form>
   </div>
