--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -1,3 +1,9 @@
+ <div class="error">
+    {{#if error}}
+      {{error}}
+    {{/if}}
+  </div>
+
 <section>
   <form id="new-user-form" action="/users" method="post">
 
