refactor ajax js code into diff files

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -25,4 +25,4 @@
   </ul>
 </section>
 
-<script src="/javascripts/postAJAX.js"></script>
+<script type="module" src="/javascripts/main.js"></script>
