--- a/views/partials/posts/form.hbs
+++ b/views/partials/posts/form.hbs
@@ -32,6 +32,7 @@
       type="submit"
       class="btn btn-primary btn-block"
       id="#new-post-form"
-    >Submit</input>
+    />
+    Submit
   </div>
 </form>
