--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -10,7 +10,7 @@
   <input type="submit">
 </form> --}}
 <form id="new-post-form" action="/posts" method="post" enctype="multipart/form-data">
-  <input type="file" name="image" id="ile" >
+  <input type="file" name="image" id="file" >
   <label for="message">Message:</label>
   <input id="message" type="text" name="message" value="">
   <input type="submit">
