--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -1,9 +1,9 @@
 <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out"></form>
 
-{{!-- <h1>{{ post.message }}</h1> --}}
+<h1>{{ post.message }}</h1>
 
-<img src="/posts/{{post._id}}/image">
+<img src="/posts/{{post._id}}/image" width="1000px">
 <p>Author: {{ post.postAuthor.firstName }} {{ post.postAuthor.lastName }}</p>
 <p>Posted at: {{post.timestamp}}</p>
 
