--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -18,7 +18,7 @@
     <div class="post-sec">
       <div class="icon post-icon">{{this.authorIcon}}</div> 
       <div class="post-details">
-        <p class="author-name">{{this.author}}</p>
+        <p class="author-name">{{{this.author}}}</p>
         {{#if gifUrl}}
           <img src="{{gifUrl}}" class="post-gif">
         {{/if}}
