--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -25,8 +25,8 @@
         <input type="submit" value="Search" class="global-button">
       </div>
     </form>
-    <form id="new-post-form" action="/posts" method="post"
-    <div class="gif-results">
+    <form id="new-post-form" action="/posts" method="post">
+      <div class="gif-results">
         {{#if gifs}}
           <ul class="gif-list">
             {{#each gifs}}
