--- a/views/partials/posts/likes.hbs
+++ b/views/partials/posts/likes.hbs
@@ -3,8 +3,11 @@
   <button type="submit" class="like-button">❤️</button>
 </form>
 <div class="post-likes">
-  <span id="like-count">{{likesCount}}</span>
-  likes
+  <div id="like-count">
+    {{likesCount}}
+    likes
+  </div>
+
   <div class="liked-by-tooltip">
     {{#each likedBy}}
       <div>{{this}}</div>
