--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,10 @@ form {
   margin-left: 420px;
   margin-right: 420px;
 }
+
+.avatar {
+  width: 60px; 
+  height: 60px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+}
