shouty handlebars helper example

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,7 +1,7 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <li>{{this.message}}</li> 
+  <li>{{{shout this}}}</li>
   <li>{{this.likes}} likes</li>
   {{/each}}
 </ul>
