passing all tests

--- a/views/partials/posts/likes.hbs
+++ b/views/partials/posts/likes.hbs
@@ -3,7 +3,7 @@
   <button type="submit" class="like-button">❤️</button>
 </form>
 <div class="post-likes">
-  <div id="like-count">
+  <div class="like-count">
     {{likesCount}}
     likes
   </div>
