--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -15,8 +15,14 @@
 <h2>Posts:</h2>
 <ul>
   {{#each posts}}
-    <li>{{this.message}}</li>
+  <br>
+    <li>{{{this.message}}}
+      <form action="/users/{{../username}}/posts/{{this._id}}/edit" method="GET">
+        <button type="submit">Edit</button>
+      </form>
+    </li>
   {{/each}}
+  <br>
 </ul>
 
 {{!-- mabye can display all current posts made by users under create posts --}}
