working on edit function

--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -1,3 +1,12 @@
+<h1>Edit Post</h1>
+
+<li class="date">Created at: {{this.date}}</li>
+      <br>
+      <li class="username">Created By: {{{this.username}}}</li>
+      <br> 
+      <li class="content">Post Content: {{{this.message}}}</li>
+      <br>
+
 <form action="/users/{{../user.username}}/posts/{{post._id}}/edit" method="POST">
   <label for="content">Edit Post:</label>
   <textarea id="content" name="content">{{post.message}}</textarea>
