--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -16,8 +16,13 @@
 <ul>
   {{#each posts}}
   <br>
-    <li>{{{this.message}}}
-      <form action="/users/{{../username}}/posts/{{this._id}}/edit" method="GET">
+    <li class="date">Created at: {{this.date}}</li>
+      <br>
+      <li class="username">Created By: {{{this.username}}}</li>
+      <br> 
+      <li class="content">{{{this.message}}}</li>
+      <br>
+      <form action="/posts/edit" method="GET">
         <button type="submit">Edit</button>
       </form>
     </li>
