edit function now working

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -22,7 +22,7 @@
       <br> 
       <li class="content">{{{this.message}}}</li>
       <br>
-      <form action="/posts/edit" method="GET">
+      <form action="/posts/{{this._id}}/edit" method="GET">
         <button type="submit">Edit</button>
       </form>
     </li>
