--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -6,25 +6,28 @@
 </head>
 
 <body>
-<div class="container-fluid px-0">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-        <a class="navbar-brand" href="sessions/new">
-      <img src="/images/logo.png" alt="Logo" width="100" height="40" class="d-inline-block align-text-top">
+    <div class="container-fluid px-0">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="sessions/new">
+                    <img src="/images/logo.png" alt="Logo" width="100" height="40"
+                        class="d-inline-block align-text-top">
 
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      {{!-- <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    {{!-- <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
 
-      </div> --}}
+                    </div> --}}
+                </div>
+            </div>
+        </nav>
     </div>
-  </div>
-</nav>
-</div>
     {{!-- <div class="row">
         <div class="col-1"></div>
         <div class="col-10"> <a href="/sessions/new" class="text-decoration-none">
