--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,49 +1,91 @@
-<form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
-    </form>
-<h1>Timeline</h1>
-<ul class="posts">
-  {{#each posts}}
-  <li>
-    <p>{{this.postAuthor.firstName}} {{this.postAuthor.lastName}} posted:</p>
-    <a href="/posts/{{this._id}}">{{this.message}}</a>
-    
-    <button class="likeButtonTimeline" data-postid="{{this._id}}">Like</button>
-    <span id="likesCount-{{this._id}}">{{this.likes.length}}</span> likes
-  </li>
-  <span class="time-ago">Posted {{timeAgo this.timestamp}}</span><br/>
-  {{/each}}
-</ul>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Timeline</title>
+  <link rel="stylesheet" href="/stylesheets/posts.css">
+</head>
+
+<body>
+
+  <div class="container-fluid px-0">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="sessions/new">
+          <img src="/images/logo.png" alt="Logo" width="100" height="40" class="d-inline-block align-text-top">
+
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          {{!-- <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+          </div> --}}
+            <form action='/sessions?_method=DELETE' method='POST'>
+    <input type="submit" value="Log Out">
+  </form>
+
+    <a href="../profile">My profile</a>
 
 
-<a href="../profile">My profile</a>
+        </div>
+      </div>
+    </nav>
+  </div>
 
-<script>
-  const likeButtonsTimeline = document.querySelectorAll('.likeButtonTimeline');
 
-  likeButtonsTimeline.forEach(button => {
-    button.addEventListener('click', () => {
-      const postId = button.getAttribute('data-postid');
-      const likesCountElement = document.getElementById(`likesCount-${postId}`);
 
-      // Disable the like button
-      button.disabled = true;
+  <h1>Timeline</h1>
+  <ul class="posts">
+    {{#each posts}}
+    <li class="border">
+      <p>{{this.postAuthor.firstName}} {{this.postAuthor.lastName}} posted:</p>
+      <a href="/posts/{{this._id}}">{{this.message}}</a>
 
-      fetch(`/posts/${postId}/like`, { method: 'POST' })
-        .then(response => response.json())
-        .then(data => {
-          likesCountElement.textContent = data.likesCount;
-        })
-        .catch(error => {
-          console.log(error);
-        })
-        .finally(() => {
-          // Re-enable the like button after the request is completed
-          button.disabled = false;
-        });
+      <button class="likeButtonTimeline" data-postid="{{this._id}}">Like</button>
+      <span id="likesCount-{{this._id}}">{{this.likes.length}}</span> likes
+    </li>
+    <span class="time-ago">Posted {{timeAgo this.timestamp}}</span><br />
+    {{/each}}
+  </ul>
+
+
+
+
+  <script>
+    const likeButtonsTimeline = document.querySelectorAll('.likeButtonTimeline');
+
+    likeButtonsTimeline.forEach(button => {
+      button.addEventListener('click', () => {
+        const postId = button.getAttribute('data-postid');
+        const likesCountElement = document.getElementById(`likesCount-${postId}`);
+
+        // Disable the like button
+        button.disabled = true;
+
+        fetch(`/posts/${postId}/like`, { method: 'POST' })
+          .then(response => response.json())
+          .then(data => {
+            likesCountElement.textContent = data.likesCount;
+          })
+          .catch(error => {
+            console.log(error);
+          })
+          .finally(() => {
+            // Re-enable the like button after the request is completed
+            button.disabled = false;
+          });
+      });
     });
-  });
-</script>
+  </script>
 
 
-<a class="new-post-link" href="/posts/new">New post</a>
+  <a class="new-post-link" href="/posts/new">New post</a>
+</body>
+
+</html>
