--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,13 +1,25 @@
-<h1>Name</h1>
-<a href="../posts">Timeline</a>
 <form action="/sessions?_method=DELETE" method="POST">
   <input type="submit" value="Log Out" />
 </form>
 
+<h1>{{currentUser.firstName}} {{currentUser.lastName}}</h1>
+
+<form id="new-post-form" action="/profile" method="post" enctype="multipart/form-data">
+  <input type="file" name="profileImage" id="file" >
+  <input type="submit">
+</form>
+
+{{#if currentUser.profileImage.contentType}}
+  <a href="/posts/{{currentUser._id}}">
+    <img src='/profile/{{currentUser._id}}' width="500px">
+  </a>
+{{/if}}
+
+<a href="../posts">Timeline</a>
 
 <div>
   <p>Friends</p>
-  <ul class="friends">
+  <ul class="users">
     {{#each friends_names}}
       <form action="/profile/remove-friend" method="POST">
         <input type="hidden" name="friendEmail" value="{{this.email}}">
@@ -26,8 +38,7 @@
       <form class="addFriendForm" data-friend-email="{{this.email}}">
         <input type="hidden" name="friendEmail" value="{{this.email}}">
         <li>{{this.firstName}} {{this.lastName}}
-          {{#if friendRequestSent}}
-            {{#if (currentUser.sentFriendRequests.includes this.email)}}
+            {{#if this.friendRequested }}
               <button class="addFriendButton" type="button" disabled>Friend Request Sent</button>
             {{else}}
               <button class="addFriendButton" type="button">Add Friend</button>
